# quanta

./: .gitignore  CLAUDE.md  INITIAL_PROMPT.md  PLAN.md  PLAN_153.md  PLAN_minference.md  PLAN_minimax_m3.md  PLAN_nemotron_ultra.md  PLAN_nex_n2_pro.md  PLAN_qwen35_experts.md  README.md  pyproject.toml
.claude/memory/: MEMORY.md  feedback_batched_rope_bf16.md  feedback_kimi_not_deepseek.md  feedback_memory_safety.md  feedback_mlx_only.md  feedback_selfcontained_artifact.md  feedback_streaming_layerwise.md  project_artifact_output_path.md  project_bake_strategy.md  project_batched_operating_point.md  project_eagle3_speculative.md  project_flash_sdpa_longctx.md  project_forward_bug_resolved.md  project_internlm2_eagle.md  project_internlm2_minference.md  project_kv_arena_18.md  project_model_targets.md  project_nemotron_ultra.md  project_nex_n2_pro.md  project_omlx_serving_contract.md  project_paged_batched_153.md  project_prefill_optimization.md  project_qwen35_experts.md  project_tokenizer_eos.md
.githooks/: pre-commit
.github/workflows/: parity-gates.yml
docs/: batched_tree_verify.md  hierarchical_moe_routing.md
parity/: __init__.py  _image_decode.py  _modelfree.py  allocate_test.py  artifact_test.py  awq_test.py  bake_quant_test.py  bake_test.py  batched_attention_test.py  bf16_scale_g64_test.py  cache_parity.py  calib_test.py  diag.py  dsv4_artifact_smoke.py  dsv4_artifact_test.py  dsv4_attention_test.py  dsv4_attn_oracle_test.py  dsv4_b48_noise.py  dsv4_bake_test.py  dsv4_batched_attention_test.py  dsv4_batched_bench.py  dsv4_batched_test.py  dsv4_batched_tree_verify_real.py  dsv4_batched_tree_verify_test.py  dsv4_compressor_test.py  dsv4_decode_attn_test.py  dsv4_dequant_test.py  dsv4_encoding_test.py  dsv4_forward_ppl.py  dsv4_forward_test.py  dsv4_generate_test.py  dsv4_hyper_test.py  dsv4_indexer_test.py  dsv4_int4_bench.py  dsv4_int4_ppl.py  dsv4_kv_arena_test.py  dsv4_kvcache_int8_test.py  dsv4_loader_test.py  dsv4_moe_test.py  dsv4_mtp_spec_test.py  (+271 more)
pth_data/: _quanta_omlx_autopatch.py  zz_quanta_omlx_autopatch.pth
scripts/: restore_claude_memory.sh
src/quanta/: __init__.py  cache.py  cache_quant.py  compressed_int4.py  config.py  generate.py  loader.py  model.py  omlx_patch.py  runtime.py  tokenizer.py
src/quanta/bake/: __init__.py  allocate.py  artifact.py  awq.py  calibrate.py  gptq.py  orchestrate.py  quant.py
src/quanta/dsv4/: __init__.py  artifact.py  attention.py  bake.py  batched_generate.py  batched_runtime.py  calibrate.py  compressor.py  config.py  decode.py  encoding.py  fp.py  generate.py  hyper.py  indexer.py  loader.py  model.py  moe.py  mtp.py  routing_capture.py  runtime.py  spec.py  tokenizer.py
src/quanta/eagle/: __init__.py  artifact.py  capture.py  drafter.py  spec.py  spec_core.py  train.py
src/quanta/glm/: __init__.py  artifact.py  attention.py  bake.py  calibrate.py  config.py  decode.py  generate.py  indexer.py  loader.py  model.py  moe.py  mtp.py  runtime.py  spec.py  tokenizer.py
tests/: __init__.py  conftest.py  test_environment.py  test_parity_modelfree.py
(+114 files in other folders)
