[project]
name = "quanta"
version = "0.1.0"
description = "Parity-first MLX quantization + sparse-MoE inference runtime (Kimi-K2.6, then GLM/DeepSeek)"
authors = [
    { name = "Pedro Jorge", email = "pmrjge@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mlx>=0.31.2",
    "numpy>=2.4.6",
    "regex>=2026.5.9",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
# Offline-only tooling: parity references (HF), tokenizers, and source-checkpoint
# loading during bake/calibration. NEVER imported on the runtime hot path.
reference = [
    "transformers>=5.9.0",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
]
# oMLX integration (added later, mirrors the previous project's extra).
omlx = [
    "omlx[grammar] @ git+https://github.com/jundot/omlx.git",
]

# Console script: arms the oMLX autopatch (registers the quanta engine + routes quanta
# artifacts to it), then hands off to oMLX's CLI. Run `quanta-omlx serve ...` in place of omlx.
[project.scripts]
quanta-omlx = "quanta.omlx_patch:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

# Ship the oMLX-autopatch ``.pth`` + helper module to ``site-packages/`` root, so any Python
# process with quanta installed arms the import-hook before oMLX modules load — ``omlx serve``
# then routes quanta artifacts to ``QuantaOmlxEngine`` without needing the ``quanta-omlx`` wrapper.
# Files in ``pth_data/`` land at the purelib (site-packages) root via PEP 491 data tagging.
[tool.uv.build-backend]
data = { purelib = "pth_data" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
# Byte-faithful vendored copy of the DeepSeek-V4 reference encoder (checkpoint encoding_dsv4.py);
# its body is intentionally left unmodified, so its style is not linted.
"src/quanta/dsv4/encoding.py" = ["E722", "F841"]
